ad-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: student-tweek36-marketplace-ad-service-web-fixed
  namespace: student-tweek36-marketplace-ad-service
  labels:
    app.kubernetes.io/name: student-tweek36-marketplace-ad-service
    app.kubernetes.io/component: web-fixed
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: student-tweek36-marketplace-ad-service
      app.kubernetes.io/component: web-fixed
  template:
    metadata:
      labels:
        app.kubernetes.io/name: student-tweek36-marketplace-ad-service
        app.kubernetes.io/component: web-fixed
    spec:
      containers:
      - name: app
        image: ghcr.io/tweek36/marketplace-ad-service-example:stable
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8000
          name: http
          protocol: TCP
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop: ["ALL"]
          runAsNonRoot: true
          runAsUser: 1000
          seccompProfile:
            type: RuntimeDefault
        resources:
          requests:
            cpu: "100m"
            memory: "64Mi"
      nodeSelector:
        usecase: students
      tolerations:
      - key: "dedicated"
        operator: "Equal"
        value: "students"
        effect: "NoSchedule"
